
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih

********************************************************************************

  September 13 2017
  deviceServiceVersion = 1013464
	
  [*] Fixed generated bar code centering logic
  [-] FSPrintTags: do not print 1084, 1085, 1086, 1203 tags
  
********************************************************************************

  September 05 2017
  deviceServiceVersion = 1013463
	
  [+] Added ability to print FSTags description when they passed with current font
  
********************************************************************************

  September 04 2017
  deviceServiceVersion = 1013462
	
  [*] Errors suppressed when paper ended after check closed
  [+] Added print continuation DIO-command and method
  [+] Added method fsReadDocumentTLV to allow document TLV reading
  
********************************************************************************

  August 23 2017
  deviceServiceVersion = 1013461
	
  [*] Fixed rext printing with font number in check
  [*] Fixed #20: get rid of hardcoded payment names
  [+] Added printRecMessage overload which accepts font number
  [+] Added property openReceiptOnBegin to enable check opening on beginFiscalReceipt
  [+] Added ability to pass paymentType and subjectType for check position

********************************************************************************

  August 15 2017
  deviceServiceVersion = 1013460
	
  [-] Fixed max payment type number when reading payment type names	

********************************************************************************

  August 14 2017
  deviceServiceVersion = 1013459
	
  [-] Fixed SKL generation when using FSSale command
	
********************************************************************************

  August 3 2017